# prefab-vpkg-integration-sample

./: README.md  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/io/atkawa7/prefab/sample/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/io/atkawa7/prefab/sample/: MainActivity.java  User.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/io/atkawa7/prefab/sample/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
